fix overflow on html and body

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -699,6 +699,10 @@
 html {
   box-sizing: border-box; }
 
+html,
+body {
+  overflow: auto !important; }
+
 * {
   margin: 0;
   padding: 0;
