--- a/content/themes/elements/sass/base/_reset.scss
+++ b/content/themes/elements/sass/base/_reset.scss
@@ -2,6 +2,11 @@ html{
   box-sizing: border-box;
 }
 
+html,
+body{
+  overflow: auto !important;
+}
+
 *{
   margin: 0;
   padding: 0;
